tests/baselines/reference/awaitBinaryExpression5_es5(target=es2015).errors.txt
awaitBinaryExpression5_es5.ts(8,5): error TS2454: Variable 'o' is used before being assigned.


==== awaitBinaryExpression5_es5.ts (1 errors) ====
    declare var a: boolean;
    declare var p: Promise<boolean>;
    declare function before(): void;
    declare function after(): void;
    async function func(): Promise<void> {
        before();
        var o: { a: boolean; };
        o.a = await p;
        ~
!!! error TS2454: Variable 'o' is used before being assigned.
        after();
    }